Core infrastructure set-up

--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,7 @@ DB_PORT=5432
 DB_NAME=ecoxchange_dev
 DB_USER=postgres
 DB_PASSWORD=password
+DB_FORCE_SYNC=false
 
 # JWT Configuration
 JWT_SECRET=ecoxchange_super_secret_jwt_key_development_only
@@ -23,6 +24,7 @@ ECOXCHANGE_TOKEN_ADDRESS=
 ECOXCHANGE_MARKET_ADDRESS=
 VALIDATOR_REGISTRY_ADDRESS=
 COMPANY_ADDRESS=
+DYNAMIC_PRICING_ADDRESS=
 
 # IPFS Configuration
 IPFS_HOST=localhost
