--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -12,6 +12,7 @@ NEXT_PUBLIC_ECOXCHANGE_TOKEN_ADDRESS=
 NEXT_PUBLIC_ECOXCHANGE_MARKET_ADDRESS=
 NEXT_PUBLIC_VALIDATOR_REGISTRY_ADDRESS=
 NEXT_PUBLIC_COMPANY_ADDRESS=
+NEXT_PUBLIC_DYNAMIC_PRICING_ADDRESS=
 
 # IPFS Configuration
 NEXT_PUBLIC_IPFS_GATEWAY=https://ipfs.io/ipfs/
@@ -23,5 +24,10 @@ NEXT_PUBLIC_APP_VERSION=1.0.0
 NEXT_PUBLIC_SUPPORT_EMAIL=support@ecoxchange.com
 
 # Feature Flags
+NEXT_PUBLIC_ENABLE_DYNAMIC_PRICING=true
+NEXT_PUBLIC_ENABLE_NOTIFICATIONS=true
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
-NEXT_PUBLIC_ENABLE_DEBUG=true
+
+# Development Settings
+NEXT_PUBLIC_DEBUG_MODE=true
+NEXT_PUBLIC_SHOW_CONSOLE_LOGS=true
